channel browse + channel detail and videos [WiP]
